# conduit

./: .env.template  .gitignore  CLAUDE.md  FEATURE_COMPARISON.md  README.md  pyproject.toml  test_ai_perplexity.json  test_audit_compliant.json  test_audit_compliant.txt  test_backup_glean.json  test_insurance_compliant.json  test_insurance_compliant.txt  test_retention_compliant.json  test_retention_compliant.txt  test_sla_compliant.json  test_sla_compliant.txt  test_sla_partial.txt  test_sla_partial_v2.json  test_sla_partial_v2.txt
.github/workflows/: deploy-dashboard.yml
dashboard/: CLAUDE.md  README.md  batch_2_5_mockdata.js  batch_3_expanded.js  batch_4_5_expanded.js  index.html  mock-data.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: ActionCard.jsx  ChatMessage.jsx  ComplianceCard.jsx  ComplianceGraph.jsx  ControlDialog.jsx  DemoChatbot.jsx  EdgeLegend.jsx  ExampleButtons.jsx  ExtractionCard.jsx  RiskDialog.jsx  StatsCard.jsx  StepProgress.jsx  ValidationCard.jsx  VendorCard.jsx  VendorDialog.jsx
dashboard/src/data/: demoExamples.js  mockData.backup_20251027_154922.js  (+1 more)
docs/: app.js  styles.css
examples/: README.md
references/: DASHBOARD_INTEGRATION.md
src/conduit/: __init__.py  cli.py  pdf_processor.py  training_examples.py  transformer.py  validator.py  xml_parser.py
tests/: __init__.py  test_evidence_004_vulnerability.py  test_evidence_005_incident_response.py  test_evidence_007_bcpdr.py  test_evidence_023_sso_mfa.py  test_transformer_demo.py
(+34 files in other folders)
